# playground

./: .bazelignore  .bazelrc  .clang-format  .clangd  .gitattributes  .gitignore  .travis.yml  BUILD  CLAUDE.md  MODULE.bazel  README.md  WORKSPACE  changes.patch  cmd_line  consul-template.hcl  format.sh  index-sort-f.html  index-sort-l.html  index.html  maven_install.json  test.iliubang.cn.conf.ctmpl
cpp/: .bazelrc  .clang-format  .clangd  .gitignore  .travis.yml  BUILD  MODULE.bazel  README.md  WORKSPACE  badge.json  bazel-cpp  cmd_line  compdb.sh  core  format.sh  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  opts.bzl
cpp/algo/: BUILD  binary-search.cc  print_heart.cpp  readme.md
cpp/basecode/: BUILD  cistring.h  count_down_latch.cc  count_down_latch.h  crc64.cc  crc64.h  singleton.h
cpp/basecode/bootstrap/: BUILD  main.cc  result.h  result_message.h  terp.cc  terp.h
cpp/basecode/cistring/: BUILD
cpp/basecode/logger/: BUILD  buffer.cc  buffer.h  count_down_latch.cc  file_writer.cc  file_writer.h  log_appender.cc  log_appender.h  logger.cc  logger.h  singleton.h
cpp/basecode/test/: BUILD  test_cistring.cpp  test_crc64.cpp
cpp/bazel/: flex.bzl  yacc.bzl
cpp/brain_fuck/: BUILD
cpp/clang_format/baidu/: .clang-format  test.h
cpp/clang_format/chromium/: .clang-format  test.h
cpp/clang_format/google/: test.h
cpp/clang_format/llvm/: .clang-format  test.h
cpp/clang_format/microsoft/: .clang-format  test.h
cpp/clang_format/mozilla/: .clang-format  test.h
cpp/concurrency/: BUILD  multithread-1.cc
cpp/copts/: configure_copts.bzl  copts.bzl
cpp/doc/: build_gcc.md  build_llvm.md
cpp/ds/: common.h
cpp/features/: BUILD
cpp/features/cpp17/: BUILD  test_fold_exp.cpp  test_pmr1.cpp  test_pmr2.cpp  test_visit.cpp
cpp/features/cpp20/: BUILD  readme.md  test_accumulate.cpp  test_format.cpp
cpp/highkyck/: BUILD  test_format.cc
cpp/highkyck/annotation/: BUILD  guard.cc
cpp/highkyck/arena/: BUILD  arena.cpp  arena.h  arena_test.cpp
cpp/highkyck/artimg/: art.cc
cpp/highkyck/atomic/: BUILD  test.cc
cpp/highkyck/bfcc/: .clang-format  .clangd  BUILD  ast_node.cpp  ast_node.h  bfcc.cpp  codegen.cpp  codegen.h  diagnostic.cpp  diagnostic.h  lexer.cpp  lexer.h  parser.cpp  parser.h  print_visitor.cpp  print_visitor.h  readme.md  type.cpp  type.h
cpp/highkyck/bloom/: BUILD  bloom_filter.cc  bloom_filter.h  test_bloom_filter.cc
cpp/highkyck/brain_fuck/: BUILD  brain_fuck.cc  test_yabf_add3.cpp  yabf.h
cpp/highkyck/cache/: BUILD  lru_cache.h
cpp/highkyck/common/: BUILD  cli_table.h  cli_table_test.cpp  print.h
cpp/highkyck/cppstories/: BUILD  test_tuple_iteration_apply.cpp  test_tuple_iteration_basics.cpp  tuple_iteration_apply.h  tuple_iteration_basics.h
cpp/highkyck/dlopen/: BUILD  main.cc  plugin1.cc  plugin2.cc  singleton.h
cpp/highkyck/ds/: 452-minimum-number-of-arrowsto-burst-balloons.cc  BUILD
cpp/highkyck/hash/: BUILD  murmurhash2.h  test_murmurhash2.cc
cpp/highkyck/libpcap/: BUILD  demo1.cc
cpp/highkyck/meta/: BUILD  common.h  common_test.cpp  compute_type.h  forward.cc  (+18 more)
cpp/leetcode/: 0109.string-rotation-lcci.cc  0304.implement-queue-using-stacks-lcci.cc  0403.list-of-depth-lcci.cc  1006.clumsy-factorial.cc  101.symmetric-tree.cc  102.binary-tree-level-order-traversal.cc  1035.uncrossed-lines.cc  104.maximum-depth-of-binary-tree.cc  1047.remove-all-adjacent-duplicates-in-string.cc  105.construct-binary-tree-from-preorder-and-inorder-traversal.cc  1052.grumpy-bookstore-owner.cc  110.balanced-binary-tree.cc  112.path-sum.cc  1143.longest-common-subsequence.cc  118.pascals-triangle.cc  119.pascals-triangle-ii.cc  1190.reverse-substrings-between-each-pair-of-parentheses.cc  1197.coin-change.cc  12.integer-to-roman.cc  121.best-time-to-buy-and-sell-stock.cc  122.best-time-to-buy-and-sell-stock-ii.cc  124.binary-tree-maximum-path-sum.cc  125.valid-palindrome.cc  1269.number-of-ways-to-stay-in-the-same-place-after-some-steps.cc  128.longest-consecutive-sequence.cc  129.sum-root-to-leaf-numbers.cc  13.roman-to-integer.cc  131.path-sum-ii.cc  1310.xor-queries-of-a-subarray.cc  136.single-number.cc  141.linked-list-cycle.cc  142.linked-list-cycle-ii.cc  143.reorder-list.cc  144.binary-tree-preorder-traversal.cc  1442.count-triplets-that-can-form-two-arrays-of-equal-xor.cc  146.lru-cache.cc  1486.xor-operation-in-an-array.cc  15.3sum.cc  150.evaluate-reverse-polish-notation.cc  151.reverse-words-in-a-string.cc  (+128 more)
cpp/libpcap/: BUILD  demo1.cc
cpp/meta/: BUILD  array.h  expected.h  expression.h  function.h  iterator.h  match.h  optional.h  traits.h  tuple_iteration_apply.h  tuple_iteration_basics.h  type_list.h  unique_ptr.h  utils.h
cpp/metaproggramming/: BUILD
cpp/misc/: BUILD  curry_function.cc  hash.h  partial_application.cc  test_file_info.cc  test_hash.cc  test_oop.cc
cpp/modern_cpp/: 4.1-container-array.cc  7.1-concurrency.cc  7.4-condition.cc  7.5-atomic_is_lock_free.cc  BUILD  my_shared_ptr.h  thread-pool.h
cpp/pl/: BUILD
cpp/rocksdb/: BUILD  key.h  val.h
cpp/scripts/: build.sh
cpp/stl/: vector.h
cpp/test_folly/: BUILD  singleton.h
cpp/test_gtest/: math.h
cpp/test_hash/: BUILD
cpp/test_jemalloc/: main.cc
cpp/test_rocksdb/: BUILD  basic_operation.cc
cpp/toolchain/: BUILD  cc_toolchain_config.bzl
cpp/tools/: BUILD  binary.h  bits.h  boost.cpp  crc.cpp  crc.h  demangle.h  encoding.h  ip.h  logger.h  measure.h  numbers.h  preprocessor.h  random.h  scope.h  status.h  thread_pool.h
go/cgo/: BUILD.bazel  cgo_suite_test.go  demo1.go  demo1_test.go  demo2.go  demo2_hello.c  demo2_test.go  demo3.go  demo3_hello.c  demo3_hello.h  demo3_test.go  demo4.go  demo4_hello.cpp  demo4_hello.h  demo4_test.go  demo5.go  demo5_test.go  go.mod
go/tricks/: BUILD.bazel  suffix_array.go  t1.go  t1_test.go  tricks_suite_test.go
python/: BUILD  badge.json  pyproject.toml  readme.md  requirements_lock.txt
python/manim/: .gitignore
python/test/: BUILD  sensor_pb.py
python/test_crawler/: BUILD  test_crawler.py
python/test_pb/: BUILD  sensor_pb.py
python/test_pybind/: BUILD  basic.cpp  basic_test.py
(+5632 files in other folders)
