# Copyright (c) 2024 The Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Authors: liubang (it.liubang@gmail.com)

module(
    name = "playground",
    version = "1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_shell", version = "0.8.0")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "1e08f8e0507b6b6b1f4416a9a22cf5c28beaba93",
    patch_strip = 1,
    patches = [
        "//bazel:bazel-compile-commands-extractor.patch",
    ],
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

# apple support
bazel_dep(name = "apple_support", version = "2.5.4", repo_name = "build_bazel_apple_support")

# foreign cc
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

# dpes for c/cpp
bazel_dep(name = "abseil-cpp", version = "20250127.1")
single_version_override(
    module_name = "abseil-cpp",
    version = "20250127.1",
)

bazel_dep(name = "s2geometry")
git_override(
    module_name = "s2geometry",
    commit = "0fb1b8a1474f3137c8b44a7861e31f8efd1370e2",
    remote = "https://github.com/google/s2geometry",
    strip_prefix = "src",
)

bazel_dep(name = "boringssl", version = "0.20241024.0")
single_version_override(
    module_name = "boringssl",
    version = "0.20241024.0",
)

### grpc && protobuf
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "protoc-gen-validate", version = "1.2.1.bcr.1")
bazel_dep(name = "protobuf", version = "31.1")
bazel_dep(name = "grpc", version = "1.74.1")
### grpc && protobuf

## math
bazel_dep(name = "openblas", version = "0.3.28")
bazel_dep(name = "eigen", version = "5.0.1.bcr.1")

bazel_dep(name = "openssl", version = "3.3.1.bcr.1")
bazel_dep(name = "fmt", version = "12.1.0")
bazel_dep(name = "bzip2", version = "1.0.8")
bazel_dep(name = "zlib", version = "1.3.1.bcr.8")
bazel_dep(name = "zstd", version = "1.5.6")
bazel_dep(name = "libuv", version = "1.48.0")
bazel_dep(name = "curl", version = "8.8.0")
bazel_dep(name = "onetbb", version = "2022.3.0")
bazel_dep(name = "liburing", version = "2.14")
bazel_dep(name = "crc32c", version = "1.1.0")
bazel_dep(name = "snappy", version = "1.2.1")
bazel_dep(name = "lemon", version = "3.42.0")
bazel_dep(name = "sqlite3", version = "3.51.2.bcr.1")
bazel_dep(name = "simdjson", version = "4.6.0")
bazel_dep(name = "spdlog", version = "1.17.0")
bazel_dep(name = "gflags", version = "2.2.2")
bazel_dep(name = "glog", version = "0.5.0")
bazel_dep(name = "leveldb", version = "1.23")
bazel_dep(name = "asio", version = "1.34.2")

# Apache bRPC
bazel_dep(name = "brpc", version = "1.16.0")
archive_override(
    module_name = "brpc",
    integrity = "sha256-YPIYVUUn8FrY+uPLj4GHnQx9xysknN4TIEnESxpz520=",
    patch_strip = 1,
    patches = [
        "//bazel:brpc-bazel8-compat.patch",
    ],
    strip_prefix = "brpc-1.16.0",
    urls = ["https://github.com/apache/brpc/archive/refs/tags/1.16.0.tar.gz"],
)

# braft (Raft consensus library based on brpc)
bazel_dep(name = "braft", version = "1.1.2")
archive_override(
    module_name = "braft",
    integrity = "sha256-uzcF9hh0+EiOYWrjhGTv3sGiBhDd1s2CRorcgUSI8U4=",
    patch_strip = 1,
    patches = [
        "//bazel:braft-bazel8-compat.patch",
    ],
    strip_prefix = "braft-1.1.2",
    urls = ["https://github.com/baidu/braft/archive/refs/tags/v1.1.2.tar.gz"],
)
# Facebook AI Similarity Search (CPU-only)
bazel_dep(name = "faiss", version = "1.14.1")
archive_override(
    module_name = "faiss",
    integrity = "sha256-AhbTjYxcRgQzgVty083mcl6qXVdwV2J3oqvAH/xBTSA=",
    patch_strip = 1,
    patches = [
        "//bazel:faiss-bazel8-compat.patch",
    ],
    strip_prefix = "faiss-1.14.1",
    urls = ["https://github.com/facebookresearch/faiss/archive/refs/tags/v1.14.1.tar.gz"],
)

bazel_dep(name = "isa-l", version = "2.31")
bazel_dep(name = "xxhash", version = "0.8.3")
bazel_dep(name = "magic_enum", version = "0.9.7")
bazel_dep(name = "proxygen", version = "2025.02.10.00.bcr.1")
bazel_dep(name = "folly", version = "2025.01.13.00.bcr.6")
bazel_dep(name = "rocksdb", version = "9.11.2")
bazel_dep(name = "pybind11_bazel", version = "3.0.1")

# boost

bazel_dep(name = "boost.crc", version = "1.90.0.bcr.1")
single_version_override(
    module_name = "boost.crc",
    version = "1.90.0.bcr.1",
)

bazel_dep(name = "boost.scope", version = "1.90.0.bcr.1")
single_version_override(
    module_name = "boost.scope",
    version = "1.90.0.bcr.1",
)

bazel_dep(name = "boost.date_time", version = "1.90.0.bcr.1")
single_version_override(
    module_name = "boost.date_time",
    version = "1.90.0.bcr.1",
)

bazel_dep(name = "boost.mpl", version = "1.90.0.bcr.1")
single_version_override(
    module_name = "boost.mpl",
    version = "1.90.0.bcr.1",
)

bazel_dep(name = "boost.parameter", version = "1.90.0.bcr.1")
single_version_override(
    module_name = "boost.parameter",
    version = "1.90.0.bcr.1",
)

bazel_dep(name = "boost.utility", version = "1.90.0.bcr.1")
single_version_override(
    module_name = "boost.utility",
    version = "1.90.0.bcr.1",
)

bazel_dep(name = "boost.algorithm", version = "1.90.0.bcr.1")
single_version_override(
    module_name = "boost.algorithm",
    version = "1.90.0.bcr.1",
)

bazel_dep(name = "boost.container", version = "1.90.0.bcr.1")
single_version_override(
    module_name = "boost.container",
    version = "1.90.0.bcr.1",
)

bazel_dep(name = "boost.conversion", version = "1.90.0.bcr.1")
single_version_override(
    module_name = "boost.conversion",
    version = "1.90.0.bcr.1",
)

bazel_dep(name = "boost.filesystem", version = "1.90.0.bcr.1")
single_version_override(
    module_name = "boost.filesystem",
    version = "1.90.0.bcr.1",
)

bazel_dep(name = "boost.thread", version = "1.90.0.bcr.1")
single_version_override(
    module_name = "boost.thread",
    version = "1.90.0.bcr.1",
)

bazel_dep(name = "boost.variant", version = "1.90.0.bcr.1")
single_version_override(
    module_name = "boost.variant",
    version = "1.90.0.bcr.1",
)

bazel_dep(name = "boost.lexical_cast", version = "1.90.0.bcr.1")
single_version_override(
    module_name = "boost.lexical_cast",
    version = "1.90.0.bcr.1",
)

bazel_dep(name = "boost.optional", version = "1.90.0.bcr.1")
single_version_override(
    module_name = "boost.optional",
    version = "1.90.0.bcr.1",
)

bazel_dep(name = "boost.bind", version = "1.90.0.bcr.1")
single_version_override(
    module_name = "boost.bind",
    version = "1.90.0.bcr.1",
)

bazel_dep(name = "boost.assert", version = "1.90.0.bcr.1")
single_version_override(
    module_name = "boost.assert",
    version = "1.90.0.bcr.1",
)

bazel_dep(name = "boost.config", version = "1.90.0.bcr.1")
single_version_override(
    module_name = "boost.config",
    version = "1.90.0.bcr.1",
)

bazel_dep(name = "boost.core", version = "1.90.0.bcr.1")
single_version_override(
    module_name = "boost.core",
    version = "1.90.0.bcr.1",
)

bazel_dep(name = "boost.detail", version = "1.90.0.bcr.1")
single_version_override(
    module_name = "boost.detail",
    version = "1.90.0.bcr.1",
)

bazel_dep(name = "boost.function", version = "1.90.0.bcr.1")
single_version_override(
    module_name = "boost.function",
    version = "1.90.0.bcr.1",
)

bazel_dep(name = "boost.integer", version = "1.90.0.bcr.1")
single_version_override(
    module_name = "boost.integer",
    version = "1.90.0.bcr.1",
)

bazel_dep(name = "boost.iterator", version = "1.90.0.bcr.1")
single_version_override(
    module_name = "boost.iterator",
    version = "1.90.0.bcr.1",
)

bazel_dep(name = "boost.iostreams", version = "1.90.0.bcr.2")
single_version_override(
    module_name = "boost.iostreams",
    version = "1.90.0.bcr.2",
)

bazel_dep(name = "boost.asio", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.mysql", version = "1.90.0.bcr.1")

# for test
bazel_dep(name = "catch2", version = "3.13.0", dev_dependency = True)
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)
bazel_dep(name = "google_benchmark", version = "1.9.5", dev_dependency = True)
bazel_dep(name = "nanobench", version = "4.3.11", dev_dependency = True)

# bison and flex
bazel_dep(name = "rules_m4", version = "0.3.1")
bazel_dep(name = "rules_bison", version = "0.4.bcr.1")
bazel_dep(name = "rules_flex", version = "0.4.1")

bison = use_extension(
    "@rules_bison//bison/extensions:bison_repository_ext.bzl",
    "bison_repository_ext",
)
bison.repository(
    name = "bison",
    extra_copts = ["-O3"],
    version = "3.3.2",
)
use_repo(bison, "bison")

register_toolchains("@bison//:toolchain")

flex = use_extension(
    "@rules_flex//flex/extensions:flex_repository_ext.bzl",
    "flex_repository_ext",
)
flex.repository(
    name = "flex",
    extra_copts = ["-O3"],
    version = "2.6.4",
)
use_repo(flex, "flex")

register_toolchains("@flex//:toolchain")

###################################################################################################
# for java
###################################################################################################
bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_jvm_external", version = "7.0")
bazel_dep(name = "contrib_rules_jvm", version = "0.33.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.springframework.boot:spring-boot-starter-web:3.5.0",
        "org.springframework.boot:spring-boot-starter-test:3.5.0",
        "org.springframework.boot:spring-boot-starter-actuator:3.5.0",
        "org.junit.jupiter:junit-jupiter-api:5.12.2",
        "org.junit.jupiter:junit-jupiter-engine:5.12.2",
        "org.junit.platform:junit-platform-launcher:1.12.2",
        "org.junit.platform:junit-platform-reporting:1.12.2",
    ],
    known_contributing_modules = [
        "grpc-java",
        "protobuf",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://maven.aliyun.com/repository/public",
    ],
    lock_file = "//:maven_install.json",
)
use_repo(maven, "maven")

###################################################################################################
# for go
###################################################################################################
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.50.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.12")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//go:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_mattn_go_runewidth",
    "com_github_onsi_ginkgo_v2",
    "com_github_onsi_gomega",
    "com_github_rivo_uniseg",
    "com_github_sirupsen_logrus",
)

###################################################################################################
#  python
###################################################################################################
bazel_dep(name = "rules_python", version = "1.8.4")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.8.4")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.13",
)

uv = use_extension(
    "@rules_python//python/uv:uv.bzl",
    "uv",
    dev_dependency = True,
)
uv.configure(version = "0.6.2")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    experimental_index_url = "https://mirrors.aliyun.com/pypi/simple",
    hub_name = "pip",
    python_version = "3.13",
    requirements_lock = "//python:requirements_lock.txt",
)
pip.parse(
    experimental_index_url = "https://mirrors.aliyun.com/pypi/simple",
    hub_name = "pip_embedding",
    python_version = "3.13",
    requirements_lock = "//cpp/pl/recall/embedding_server:requirements_lock.txt",
)
use_repo(pip, "pip")
use_repo(pip, "pip_embedding")
