[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "async-timeout>=5.0.1",
    "asyncio>=3.4.3",
    "crawl4ai>=0.7.1",
    "shapely>=2.1.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
