#======================================================================
#
# BUILD.bazel -
#
# Created by liubang on 2023/05/21 01:54
# Last Modified: 2023/05/21 01:54
#
#======================================================================
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cgo",
    srcs = [
        "demo1.go",
        "demo2.go",
        "demo2_hello.c",
        "demo3.go",
        "demo3_hello.c",
        "demo3_hello.h",
        "demo4.go",
        "demo4_hello.cpp",
        "demo4_hello.h",
        "demo5.go",
    ],
    cgo = True,
    importpath = "github.com/playground/go/cgo",
    visibility = ["//visibility:public"],
)

go_test(
    name = "cgo_test",
    srcs = [
        "cgo_suite_test.go",
        "demo1_test.go",
        "demo2_test.go",
        "demo3_test.go",
        "demo4_test.go",
        "demo5_test.go",
    ],
    embed = [":cgo"],
    deps = [
        "@com_github_onsi_ginkgo_v2//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
