# Copyright (c) 2024 The Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Authors: liubang (it.liubang@gmail.com)

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cgo",
    srcs = [
        "demo1.go",
        "demo2.go",
        "demo2_hello.c",
        "demo3.go",
        "demo3_hello.c",
        "demo3_hello.h",
        "demo4.go",
        "demo4_hello.cpp",
        "demo4_hello.h",
        "demo5.go",
    ],
    cgo = True,
    importpath = "github.com/playground/go/cgo",
    visibility = ["//visibility:public"],
)

go_test(
    name = "cgo_test",
    srcs = [
        "cgo_suite_test.go",
        "demo1_test.go",
        "demo2_test.go",
        "demo3_test.go",
        "demo4_test.go",
        "demo5_test.go",
    ],
    embed = [":cgo"],
    deps = [
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
    ],
)
