#======================================================================
#
# BUILD.bazel -
#
# Created by liubang on 2023/05/21 01:54
# Last Modified: 2023/05/21 01:54
#
#======================================================================
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "tricks",
    srcs = [
        "suffix_array.go",
        "t1.go",
    ],
    importpath = "github.com/playground/go/tricks",
    visibility = ["//visibility:public"],
)

go_test(
    name = "tricks_test",
    srcs = [
        "t1_test.go",
        "tricks_suite_test.go",
    ],
    embed = [":tricks"],
    deps = [
        "@com_github_onsi_ginkgo_v2//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
