# Copyright (c) 2024 The Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Authors: liubang (it.liubang@gmail.com)

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "tricks",
    srcs = [
        "suffix_array.go",
        "t1.go",
    ],
    importpath = "github.com/playground/go/tricks",
    visibility = ["//visibility:public"],
)

go_test(
    name = "tricks_test",
    srcs = [
        "t1_test.go",
        "tricks_suite_test.go",
    ],
    embed = [":tricks"],
    deps = [
        "@com_github_onsi_ginkgo_v2//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
