load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "algo",
    srcs = ["LRUCache.java"],
    visibility = ["//:__subpackages__"],
)

java_binary(
    name = "LRUCache",
    main_class = "cn.iliubang.exercises.algo.LRUCache",
    visibility = ["//visibility:public"],
    runtime_deps = [":algo"],
)
