load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "atomic",
    srcs = [
        "AtomicIntegerDemo.java",
        "AtomicReferenceTest.java",
    ],
    visibility = ["//:__subpackages__"],
)

java_binary(
    name = "AtomicIntegerDemo",
    main_class = "cn.iliubang.exercises.atomic.AtomicIntegerDemo",
    visibility = ["//visibility:public"],
    runtime_deps = [":atomic"],
)

java_binary(
    name = "AtomicReferenceTest",
    main_class = "cn.iliubang.exercises.atomic.AtomicReferenceTest",
    visibility = ["//visibility:public"],
    runtime_deps = [":atomic"],
)
